syntax = "proto3";

package workers_micro;

service serviceProvider {
    rpc ServiceReq(reqData) returns(resData) {}
}

message reqData {
    string serviceName = 1;
    string operationName = 2;
    string payload = 3;
}

message resData {
    int32 status = 1;
    string message = 2;
    string data = 3;
}

message resStruct {
    resStruct response = 1;
}
